fix alignment on the landing page

--- a/root/css/style.css
+++ b/root/css/style.css
@@ -328,6 +328,10 @@ input.hiddenButton {
 .middle .zonePage .center { left: 332px; width: 400px } /* end: 732px */
 .middle .zonePage .right { left: 764px; width: 335px } /* end: 1099px */
 
+.middle .landingPage .left { right: 60%; height:100px; margin-top: 35px }
+.middle .landingPage .right { left: 40%; width: 50% }
+
+
 /* done Layout */
 
 /* Two panel steps */
